Kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: retail-app
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: retail-app
  template:
    metadata:
      labels:
        app: retail-app
    spec:
      containers:
      - name: retail-app
        image: ${IMAGE_NAME}:${IMAGE_TAG}
        ports:
        - containerPort: 3130
