Kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: retail-app-service
spec:
  selector:
    app: retail-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3130  
  type: ClusterIP
