Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: retail-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: retail-app.local  
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: retail-app-service
            port:
              number: 80
